// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] interactions Type: [column] renders without crashing 1`] = `
<View
  style={
    Array [
      false,
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "borderBottomColor": "#00000050",
          "borderBottomWidth": 0.3,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        Object {
          "borderBottomColor": "#00000050",
          "borderColor": "#00000050",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#222222",
            "fontSize": 14,
            "fontWeight": "bold",
            "paddingVertical": 12,
          },
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] - default should render without crashing 1`] = `
<View
  style={
    Array [
      false,
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "borderBottomColor": "#00000050",
          "borderBottomWidth": 0.3,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        Object {
          "borderBottomColor": "#00000050",
          "borderColor": "#00000050",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#222222",
            "fontSize": 14,
            "fontWeight": "bold",
            "paddingVertical": 12,
          },
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions web renders without crashing 1`] = `
<View
  style={
    Array [
      false,
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "borderBottomColor": "#00000050",
          "borderBottomWidth": 0.3,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        Object {
          "borderBottomColor": "#00000050",
          "borderColor": "#00000050",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#222222",
            "fontSize": 14,
            "fontWeight": "bold",
            "paddingVertical": 12,
          },
          undefined,
          Object {
            "outlineWidth": 0,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;
